--- a/index.html
+++ b/index.html
@@ -1,176 +1,154 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Onshivam Tradding</title>
-	<style type="text/css">
-		*{
-
-		}
-		body{
-			background-image: url(222.jpg);
-			background-size: cover;
-			margin: 0;
-			padding: 0;
-			color: black;
-			background-attachment:fixed;
-		}
-		.x{
-			font-weight: 500;
-			color: white;
-			background-color: #282828; 
-		}
-		.x:hover{
-			color: #282828;
-		}
-		.nav ul{
-			list-style-type: none;
-			margin:0;
-			padding: 0; 
-			top: 0;
-			width: 100%;
-			position: fixed;
-			background-color:#20b2aa;
-		}
-		.nav ul li{
-			float: left;
-		}
-		.nav li a{
-			display: inline-block;
-			text-transform: uppercase;
-			text-decoration: none;
-			color: #ffffff;
-			margin-left: 0px;
-			padding: 15px 8px;
-			font-family: sans-serif;
-			font-size: 20px;
-		}
-		li a:hover{
-			color: lightblue;
-			background-color: White;
-			border-bottom: 2px solid lightblue;
-		}
-		.ls{
-			margin-left: 600px;
-		}
-		h1{
-			font-family: sans-serif;
-			font-size: 50px;
-			margin-top: 100px;
-			color: gray;
-			text-align: center;
-		}
-		p{
-			margin-top: 30px;
-			text-align: center;
-			color: darkgray;
-			font-size: 1.5em;
-		}
-		.main-content{
-			height: 200px;
-			padding: 100px;
-			background-color: #f0ffff6b;
-		}
-		.b-box{
-			color: white;
-			height: 200px;
-			padding: 100px;
-			background-color: 	#282828;
-		}
-		h2{
-			margin-top: -45px;
-			font-size: 40px;
-		}
-		.b-box p{
-			margin-left: 8px;
-			font-size: 15px;
-			font-family: sans-serif;
-			text-align: left;
-		}
-		.footer ul{
-			margin-top: 0px;
-			margin-bottom: 0px;
-			list-style-type: none;
-			background-color: #000000b5;
-		}
-		.footer li a{
-			display: inline-block;
-			text-transform: uppercase;
-			text-decoration: none;
-			color: #ffffff;
-			margin-left: 255px;
-			padding: 15px 5px;
-			font-family: sans-serif;
-			font-size: 20px;
-		}
-		.footer li{
-			list-style: none;
-			display: inline-block;
-		}
-		.footer li a:hover{
-			font-weight: 500;
-			color: white;
-			background-color: #282828;
-		}
-		h3{
-			font-size: 20px;
-			margin-top: 80px;
-			font-family: sans-serif;
-			font-style: italic;
-
-		}
-		button{
-			padding: 8px;
-			border-radius: 8px;
-			background-color: gray;
-			color: white;
-			border-width: 0px;
-		}
-		a{
-			font-style: normal;
-			text-decoration: none;
-			text-transform: uppercase;
-			color: white;
-			font-size: 20px;
-		}
-		button:hover{
-			font-size: 25px;
-			padding: 5px 5px;
-			background-color: #282828;
-		}
-	</style>
+	<title>Dv-drape</title>
+	<!-- <link rel="stylesheet" type="text/css" href="bootstrap.css"> -->
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<!-- 	<link rel="stylesheet" type="text/css" href="style.css"> -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css2?family=Grandstander:wght@500&display=swap" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
-	<div class="nav">
-		<ul>
-			<li ><a class="x" href="_#_" >OmShivam Tradding</a></li>
-			<li><a href="_#_">Home</a></li>
-			<li><a href="_#_">Contact Us</a></li>
-			<li><a href="_#_">Products</a></li>
-			<li><a href="_#_">FAQ</a></li>
-			<li class="ls"><a href="form.html">login</a></li>
-			<li><a href="form.html">New User</a></li>
-		</ul>
+	<div class="slider">
+		<div class="load"></div>
+  	<div class="container">
+  		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+		  <a class="navbar-brand" href="#">Dv-Drape</a>
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		    <span class="navbar-toggler-icon"></span>
+		  </button>
+
+		  	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		    <ul class="navbar-nav mr-auto">
+		      <li class="nav-item active">
+		        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="#">Recent Launches</a>
+		      </li>
+		      <li class="nav-item dropdown">
+		        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		          Products
+	        </a>
+	        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+	          <a class="dropdown-item" href="sarees.html">Sarees</a>
+	          <a class="dropdown-item" href="#">Kurtis</a>
+	          <div class="dropdown-divider"></div>
+	          <a class="dropdown-item" href="#">More Stylish Produtcs</a>
+	        </div>
+	      	</li>
+	    </ul>
+	    <ul class="navbar-nav">
+	    	<li class="nav-item ll">
+        		<a class="nav-link" href="login.html">Login</a>
+      		</li>
+      		<li class="nav-item ss">
+        		<a class="nav-link" href="register.html">Sign-in</a>
+      		</li>
+	    </ul>
+	  </div>
+	</nav>
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12">
+				<div id="content">
+					<h1>Style is a way to say who you are without having to speak</h1>
+					<h3>Say hello to your Fashion</h3>
+					<hr>
+						<a href="sarees.html"><button class="btn btn-success">Change My Style</button></a>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
-	<div class="main-content">
-		<h1>
-			Welcome to the World largest Tradding Page!
-		</h1>
-		<center><p>Here you can expand your Business at large Scale</p></center>
-		<center><button><a href="form.html">Register NoW</a></button></center>
-	</div>
-	<div class="b-box">
-		<center><h2>What are the Benifites?</h2></center>
-		<center><p>" By using our website you can easily expand your business because we reached your products to more customers in whole world!Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. "</p></center>
-		<center><h3>For More Information and daily update follow us on below pages</h3></center>
-	</div>
-	<div class="footer">
-		<footer>
-			<ul>
-				<li><a href="_#_">FaceBook</a></li>
-				<li><a href="_#_">InstaGram</a></li>
-				<li><a href="_#_">TwiTTer</a></li>
-			</ul>
-		</footer>
-	</div>
+</div>
+		<footer class="page-footer font-small pt-4" style="background-color: #9932CC">
+
+	  <!-- Footer Links -->
+	  <div class="container-fluid text-center text-md-left">
+
+	    <!-- Grid row -->
+	    <div class="row text-white">
+
+	      <!-- Grid column -->
+	      <div class="col-md-6 mt-md-0 mt-3">
+
+	        <h2>About us</h2>
+			<div class="content"><p>We are the manufacturar and re-seller of all ethincs wears like saree,kurti and gowns. We have all Products for Womens and Girls</p></div>
+			<div class="social">
+				<a href="_#_"><span class="fab fa-facebook-f fa-2x text-white m-1"></span></a>
+				<a href="_#_"><span class="fab fa-twitter fa-2x text-white m-1"></span></a>
+				<a href="_#_"><span class="fab fa-instagram fa-2x text-white m-1"></span></a>
+				<a href="_#_"><span class="fab fa-youtube fa-2x text-white m-1"></span></a>
+			</div>
+	      </div>
+      <!-- Grid column -->
+
+      <hr class="clearfix w-100 d-md-none pb-3">
+
+      <!-- Grid column -->
+      <div class="col-md-3 mb-md-0 mb-3 text-white">
+
+        <h2>Address</h2>
+		<div class="content">
+			<div class="place">
+				<span class="fas fa-map-marker-alt"></span>
+				<span class="text">240/50, Raghuveer Shopers, Mota Varchha, Surat -395006</span>
+			</div>
+			<div class="phone">
+				<span class="fas fa-phone-alt"></span>
+				<span class="text">+91 777 888 2934</span>
+			</div>
+			<div class="email">
+				<span class="fas fa-envelope"></span>
+				<span class="text">omshivam.export06@gmail.com</span>
+			</div>
+		</div>
+
+      </div>
+      <!-- Grid column -->
+
+      <!-- Grid column -->
+      <div class="col-md-3 mb-md-0 mb-3 text-white">
+
+        <h2>Contact us</h2>
+		<div class="content">
+			<form action="_#_">
+				<div class="email">
+					<div class="text">Email *</div>
+					<input type="email" name="" required>
+				</div>
+				<div class="msg">
+					<div class="text">Message *</div>
+					<textarea cols="25" rows="2" required=""></textarea>
+				</div>
+				<div class="btn">
+					<button type="submit">Send</button>
+				</div>
+			</form>
+		</div>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+    </div>
+    <!-- Grid row -->
+
+  </div>
+  <!-- Footer Links -->
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center text-white py-3">© 2018 Copyright: Dv drape
+  </div>
+  <!-- Copyright -->
+
+</footer>
+	<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
